--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
