--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "formik": "^2.2.6",
     "next": "10.0.3",
     "next-images": "^1.6.2",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
