--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "next": "10.0.3",
     "next-images": "^1.6.2",
